# pythonic-general-multicast

./: CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
src/: __init__.py  base.py  client.py  constants.py  dlr.py  protocol.py  receiver.py  sender.py  server.py  utils.py
src/packets/: data.py  network.py  system.py
tests/: test_protocol.py  test_system.py
tests/packets/: test_packets.py
tests/utils/: test_bounded_lifo_queue.py
